# emcurses

./: README.md  curses.h
emscripten/: CMakeLists.txt  Makefile  build-cmake.sh  emcurses.pc.in  install-cmake.sh  pdcclip.c  pdcdisp.c  pdcemscripten.h  pdckbd.c  pdcscrn.c  pdcutil.c  template.html  termlib.js
